fix: label shouldnt break on hyphen

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 .remark-code-tabs > label {
   display: flex;
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .remark-code-tabs > label > [type=radio] {
